--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -31,11 +31,34 @@ If you are running a verion of Dada Mail 4.0.0 to 4.0.3, you'll still need to
 make those schema changes manually if you're having trouble (exactly what to do, 
 including example SQL is located in the UTF-8 FAQ). 
 
+
+=head2 Bug Fixes 4.0.4
+
+=head3 "Use Secure Sockets Layer (SSL)" option sometimes not available, even though appropriate CPAN module installed
+
+http://github.com/justingit/dada-mail/issues/#issue/35
+
+=head3 Dada Bridge will always say that SpamAssassin isn't available
+
+http://github.com/justingit/dada-mail/issues/closed#issue/34
+
+=head3 Moderation broken on Dada Bridge
+
+http://github.com/justingit/dada-mail/issues/closed#issue/33
+
+=head3 Fallback Variables aren't used. 
+
+http://github.com/justingit/dada-mail/issues/closed#issue/32
+
+=head3 "Save, Then Test Your Sending Preferences..." button broken in Sending Preferences
+
+http://github.com/justingit/dada-mail/issues/closed#issue/31
+
 =head2 CPAN Modules 4.0.4
 
 =over
 
-=item * CGI::Sessoion upgrade to: 4.42
+=item * CGI::Sessoion upgraded to: 4.42
 
 CGI::Session handles all session management in Dada Mail. 
 
@@ -63,27 +86,6 @@ renaming them back to their original name will make them, "active"
 
 =back
 
-=head2 Bug Fixes 4.0.4
-
-=head3 "Use Secure Sockets Layer (SSL)" option sometimes not available, even though appropriate CPAN module installed
-
-http://github.com/justingit/dada-mail/issues/#issue/35
-
-=head3 Dada Bridge will always say that SpamAssassin isn't available
-
-http://github.com/justingit/dada-mail/issues/closed#issue/34
-
-=head3 Moderation broken on Dada Bridge
-
-http://github.com/justingit/dada-mail/issues/closed#issue/33
-
-=head3 Fallback Variables aren't used. 
-
-http://github.com/justingit/dada-mail/issues/closed#issue/32
-
-=head3 "Save, Then Test Your Sending Preferences..." button broken in Sending Preferences
-
-http://github.com/justingit/dada-mail/issues/closed#issue/31
 
 =head1 4.0.3
 
