--- a/dada/extras/documentation/pod_source/FAQ-email_sending.pod
+++ b/dada/extras/documentation/pod_source/FAQ-email_sending.pod
@@ -242,6 +242,89 @@ Now that you know how to set the B<Return-Path> header, put it to some good use!
 
 http://dadamailproject.com/support/documentation/dada_bounce_handler.pl.html
 
+=head1 Dada Mail and Google Apps for Domains
+
+Many people use Google Apps alongside their other resources available with their hosting company. 
+
+There is a possibility that you can use Dada Mail in such a situation. 
+
+=head2 Before you begin
+
+Double check that you have support to send messages using an SSL connection. If you can't - if these options are disabled in Dada Mail, you 
+may be out of luck. 
+
+=head2 Do not SEND email using Google Apps
+
+One major limitation of using Google Apps for your email needs is that the B<daily> email sending limitation per account is 
+around 250 messages. This makes running a mailing list fairly unrealistic and is the largest problem we'll need to overcome, 
+when setting up Dada Mail. 
+
+=head2 Use your local mail server/sendmail command to send mail
+
+The easiest way to send mail with Dada Mail is to just use the local mail server on your hosting account, via the sendmail command, 
+instead of using Google's SMTP servers. Your local mail server will have a different, but hopefully higher limitation, than 
+the Google Apps limitation - hopefully 500 messages/hour and higher. 
+
+=head3 SPF record? 
+
+The only thing you want to make sure is set up correctly is the SPF record for sending email using your local mail server. How to do that is 
+a little over the reach of this tutorial - but it may be that there's nothing you need to do, as its the Google Apps server that'll require 
+the SPF record to be setup correctly. 
+
+
+=head2 Using Dada Bridge for Discussion Lists
+
+=head3 Method #1 Setup the List Email account on Google Apps, use the Google Apps login info
+
+You'll probably be able to use Dada Bridge with Google Apps, since Dada Bridge only needs to be able to I<receive> email, if like above, 
+we're setting up Dada Mail to send using the local mail server. 
+
+You'll want to setup the List Email POP account through Google Apps and plug in the Login Info 
+for this List Email into Dada Bridge. A few things should be the same for all Google Apps email accounts, as is listed at: 
+
+http://www.google.com/support/a/bin/answer.py?hl=en&answer=60730
+
+For Dada Bridge, this is broken down as: 
+
+	List Email: youraddress@yourdomain.com  	
+	POP3 Server pop.gmail.com	
+	POP3 Username: youraddress@yourdomain.com 	
+	POP3 Password: (Password)	
+	Type: Automatic
+	Use Secure Sockets Layer (SSL) CHECKED.
+
+If B<Use Secure Sockets Layer (SSL)> is disabled, you may be out of luck, until the missing CPAN modules are installed. 
+
+That's it. Mail will be received via Google Apps, sent using the local mail server and replies will be sent to the Google Apps POP3 List Owner email account. 
+
+Nothing to it. 
+
+=head3 Method #2 Setup a subdomain with a different MX record
+
+Another option may be to just setup a separate subdomain and a different MX record, so that mail sent to an email address with this 
+subdomain will simply be handled by your hosting account instead of Google Apps. This workflow works exactly like you'd work with Dada Mail, without Google Apps
+
+=head2 Using Mystery Girl (Bounce Handler)
+
+Using the Bounce Handler may be tricky. 
+
+You'll want to use the local mail server, as before to send mail, but it's possible that the local mail server is also what's creating the bounced messages 
+that is supposed to be delivered to the Bounce Handler Email address. Sometimes, this means, the local mail server will look for a local email box belonging to the 
+bounce handler email address. If it can't find it, no bounced message will get delivered, even if you have the I<exact same email account> setup correctly via Google Apps. 
+
+=head3 Method #3 Setup a local mailbox
+
+One option is to simply setup that local mailbox and use the login info that points to your hosting account's mail server, instead of using Google Apps. 
+This is a very strange setup, as you cannot I<send> an email message to this mailbox, as you regularly would - it would just be checked via Google Apps, 
+but it I<can> be used locally by your local mail server to store the bounce messages, as well as by Mystery Girl to, I<check> this local messages. 
+
+=head3 Method #2 Setup a subdomain with a different MX record
+
+Just like with Dada Bridge, another option would be just to set up a new subdomain, with a different MX record that points the subdomain's email delivery to your hosting account's mail server, instead of Google Apps. 
+
+
+
+
 =head1 Problems
 
 =head2 Write an HTML message, receive it as PlainText
