--- a/README.pod
+++ b/README.pod
@@ -1,8 +1,10 @@
-:: NAME
+=pod
+
+=head1 NAME
 
 Dada Mail
 
-:: INTRODUCTION
+=head1 INTRODUCTION
 
 Dada Mail is a completely contemporary, mature and intuitive web-based
 e-mail list management system, which runs on most any Unix-like hosting
@@ -37,11 +39,11 @@ By Justin Simoni
 
 And the Dada Mailers 
 
-:: HOMEPAGE
+=head1 HOMEPAGE
 
 http://dadamailproject.com
 
-:: INSTALLING 
+=head1 INSTALLING 
 
 This release of Dada Mail needs 4 variables changed in the Config.pm 
 file that's located in the DADA directory. Installation instructions are 
@@ -57,7 +59,7 @@ Advanced Installation Instructions:
 
 http://dadamailproject.com/purchase/sample_chapter-dada_mail_setup.html
 
-:: UPGRADING
+=head1 UPGRADING
 
 See: 
 
@@ -68,7 +70,7 @@ and putting the new version of the, "dada" directory. ALL files have to be
 replaced - don't make exceptions. Finally, configure the new copy similar 
 to the old copy. 
 
-:: DOCUMENTATION
+=head1 DOCUMENTATION
 
 See: 
 
@@ -80,21 +82,25 @@ dada/extras/documentation/html_version
 
 directory. Just open up 'index.html' in a web browser.
 
-:: SUPPORT
+=head1 SUPPORT
 
-Boards: 
+=over
 
-	http://dadamailproject.com/support/boards
+=item * Boards: 
 
-Discussion Mailing List: 
+http://dadamailproject.com/support/boards
 
-	http://dadamailproject.com/cgi-bin/dada/mail.cgi/list/dadadev/	
+=item * Discussion Mailing List: 
 
-See Also: Documentation Links above.
+http://dadamailproject.com/cgi-bin/dada/mail.cgi/list/dadadev/	
 
-LICENSE AND COPYRIGHT 
+=back 
 
-Copyright (c) 1999-2009
+=head2 See Also: Documentation Links above.
+
+=head1 LICENSE AND COPYRIGHT 
+
+Copyright (c) 1999-2010
 Justin Simoni 
 http://justinsimoni.com 
 All rights reserved. 
